service.yaml
apiVersion: v1
kind: Service
metadata:
  name: <이름>
  namespace: <네임스페이스>
  labels:
    app: <라벨>
spec:
  selector:
    app: <라벨>
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: <포트>
  type: LoadBalancer
